--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "bootstrap/bootstrap";
 @import "bootstrap/variables";
+@import "./personal";
 
 $font-primary: "Spectral", serif;
 
@@ -620,7 +621,7 @@ h5,
 .header-video video {
   min-width: 100%;
   // min-height: 100%;
-  max-height: 700px;
+  max-height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -1544,7 +1545,7 @@ textarea.form-control {
   padding: 6em 0;
   position: relative;
   @include media-breakpoint-down(sm) {
-    padding: 6em 0;
+    padding: 3em 0;
   }
 }
 
