--- a/scss/_personal.scss
+++ b/scss/_personal.scss
@@ -97,10 +97,28 @@ $primary: #0a8a1f;
   .footer-slogan {
     font-size: 0.9em;
   }
+  .phone a {
+    font-size: 14px !important;
+  }
+  .phone {
+    padding: 8px 0 !important;
+  }
+  .social-media p a span {
+    font-size: 13px !important;
+  }
 }
 @media screen and (max-width: 380px) {
   .ftco-footer-social {
     margin-left: 10px !important;
+  }
+  .phone a {
+    font-size: 12px !important;
+  }
+  .phone {
+    padding: 10px 0 !important;
+  }
+  .social-media p a span {
+    font-size: 12px !important;
   }
 }
 @media screen and (max-width: 370px) {
@@ -130,11 +148,42 @@ $primary: #0a8a1f;
 }
 
 // Hiding Big Queries
+@media screen and (min-width: 600px) {
+  .phone a {
+    font-size: 16px !important;
+  }
+  .phone {
+    padding: 7px 0 !important;
+  }
+  .social-media p a span {
+    font-size: 14px !important;
+    width: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 @media screen and (min-width: 767px) {
   .hide-lg {
     display: none !important;
   }
   .ftco-footer-social li {
     margin: 0 12px !important;
+  }
+
+  .phone a {
+    font-size: 18px !important;
+  }
+  .phone {
+    padding: 7px 0 !important;
+  }
+
+  .social-media p a span {
+    font-size: 18px !important;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
