--- a/scss/_personal.scss
+++ b/scss/_personal.scss
@@ -2,6 +2,17 @@
 
 $primary: #0a8a1f;
 
+.text-success {
+  color: $primary !important;
+  text-align: center !important;
+  font-size: 0.9rem !important;
+}
+.text-error {
+  color: rgb(183, 33, 33) !important;
+  text-align: center !important;
+  font-size: 0.9rem !important;
+}
+
 .navbar-brand {
   display: flex;
   align-items: center;
@@ -75,6 +86,11 @@ $primary: #0a8a1f;
 // Footer
 .ftco-footer-social li {
   margin: 0 10px !important;
+}
+
+// MAPS
+.g-maps {
+  margin-top: 50px;
 }
 
 // Hiding Small Query
@@ -185,5 +201,9 @@ $primary: #0a8a1f;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .g-maps {
+    margin-top: 0;
   }
 }
