--- a/css/style.css
+++ b/css/style.css
@@ -9428,6 +9428,55 @@ a.text-dark:hover, a.text-dark:focus {
   margin-top: 50px;
 }
 
+.letras {
+  color: rgba(255, 255, 255, 0.9) !important;
+  -webkit-text-fill-color: transparent !important;
+  -webkit-text-stroke-width: 1px !important;
+  -webkit-text-stroke-color: white !important;
+  text-shadow: #0a8a1f 1px 1px 6px;
+  filter: drop-shadow(black 3px 0px 1px);
+}
+
+.letras span {
+  color: white !important;
+  -webkit-text-fill-color: white !important;
+  -webkit-text-stroke-width: 0 !important;
+  -webkit-text-stroke-color: transparent !important;
+  text-shadow: transparent 1px 1px 6px;
+  filter: drop-shadow(black 0px 0px 0px);
+  text-decoration: underline #0a8a1f 3px;
+}
+
+.btn-second {
+  filter: drop-shadow(black 1px 1px 5px) !important;
+  box-shadow: black 1px 1px 5px !important;
+  background: rgba(255, 255, 255, 0.3) !important;
+  color: white;
+  text-shadow: black 0px 0px 3px;
+  border: 2px solid white;
+  transition: all ease-out 0.2s;
+}
+
+.btn-second:hover {
+  background: #0a8a1f !important;
+  text-shadow: none;
+  color: white;
+  filter: none !important;
+  box-shadow: none !important;
+  border: 2px solid #0a8a1f;
+}
+
+.btn-primary-title {
+  filter: drop-shadow(#303030 1px 1px 2px) !important;
+  transition: all ease-out 0.2s;
+  text-shadow: black 1px 1px 3px !important;
+}
+
+.btn-primary-title:hover {
+  filter: none !important;
+  text-shadow: none !important;
+}
+
 @media screen and (max-width: 501px) {
   .hide-xs {
     display: none !important;
@@ -10043,6 +10092,7 @@ h5,
 
 .hero-wrap {
   width: 100%;
+  height: 100% !important;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -10170,33 +10220,58 @@ h5,
 }
 
 .hero-wrap1 {
-  height: 100vh;
+  height: auto !important;
   display: flex;
   align-items: center;
 }
 
 .container1 {
   max-width: 149rem;
+  height: 100% !important;
   padding-left: 1rem;
   padding-right: 1rem;
   margin: auto;
   text-align: center;
 }
 
-.header-video {
+.container1 div {
+  height: calc(100vh - 146px) !important;
+  width: 100% !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.header-carousel {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100% !important;
   overflow: hidden;
 }
 
-.header-video video {
+.header-img {
   min-width: 100%;
-  max-height: 100%;
+  height: calc(100vh - 146px) !important;
   object-fit: cover;
-  object-position: center;
+  object-position: central !important;
+}
+
+.header-img-central {
+  object-position: 65% 100% !important;
+}
+
+.header-img-10x {
+  object-position: 10% 100% !important;
+}
+
+.header-img-25x {
+  object-position: 25% 100% !important;
+}
+
+.header-img-75x {
+  object-position: 75% 100% !important;
 }
 
 .hero-wrap1-overlay {
