--- a/scss/_personal.scss
+++ b/scss/_personal.scss
@@ -93,6 +93,55 @@ $primary: #0a8a1f;
   margin-top: 50px;
 }
 
+// LETRAS
+.letras {
+  color: rgba($color: white, $alpha: 0.9) !important;
+  -webkit-text-fill-color: transparent !important;
+  -webkit-text-stroke-width: 1px !important;
+  -webkit-text-stroke-color: white !important;
+  text-shadow: $primary 1px 1px 6px;
+  filter: drop-shadow(black 3px 0px 1px);
+  span {
+    color: white !important;
+    -webkit-text-fill-color: white !important;
+    -webkit-text-stroke-width: 0 !important;
+    -webkit-text-stroke-color: transparent !important;
+    text-shadow: transparent 1px 1px 6px;
+    filter: drop-shadow(black 0px 0px 0px);
+    text-decoration: underline $primary 3px;
+  }
+}
+
+// BTNS
+
+.btn-second {
+  filter: drop-shadow(black 1px 1px 5px) !important;
+  box-shadow: black 1px 1px 5px !important;
+  background: rgba($color: white, $alpha: 0.3) !important;
+  color: white;
+  text-shadow: black 0px 0px 3px;
+  border: 2px solid white;
+  transition: all ease-out 0.2s;
+  &:hover {
+    background: $primary !important;
+    text-shadow: none;
+    color: white;
+    filter: none !important;
+    box-shadow: none !important;
+    border: 2px solid $primary;
+  }
+}
+
+.btn-primary-title {
+  filter: drop-shadow(#303030 1px 1px 2px) !important;
+  transition: all ease-out 0.2s;
+  text-shadow: black 1px 1px 3px !important;
+  &:hover {
+    filter: none !important;
+    text-shadow: none !important;
+  }
+}
+
 // Hiding Small Query
 @media screen and (max-width: 501px) {
   .hide-xs {
