--- a/scss/style.scss
+++ b/scss/style.scss
@@ -485,6 +485,7 @@ h5,
 
 .hero-wrap {
   width: 100%;
+  height: 100% !important;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -596,34 +597,59 @@ h5,
 }
 
 .hero-wrap1 {
-  height: 100vh;
+  height: auto !important;
   display: flex;
   align-items: center;
 }
 
 .container1 {
   max-width: 149rem;
+  height: 100% !important;
   padding-left: 1rem;
   padding-right: 1rem;
   margin: auto;
   text-align: center;
 }
 
-.header-video {
+.container1 div {
+  height: calc(100vh - 146px) !important;
+  // max-height: 600px;
+  width: 100% !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.header-carousel {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100% !important;
   overflow: hidden;
 }
 
-.header-video video {
+.header-img {
   min-width: 100%;
-  // min-height: 100%;
-  max-height: 100%;
+  height: calc(100vh - 146px) !important;
   object-fit: cover;
-  object-position: center;
+  object-position: central !important;
+}
+
+.header-img-central {
+  object-position: 65% 100% !important;
+}
+
+.header-img-10x {
+  object-position: 10% 100% !important;
+}
+
+.header-img-25x {
+  object-position: 25% 100% !important;
+}
+
+.header-img-75x {
+  object-position: 75% 100% !important;
 }
 
 .hero-wrap1-overlay {
